# godofprompt-scraper

./: .coderabbit.yaml  .gitignore  ADVANCED_SCRAPING_GUIDE.md  CLAUDE.md  CODE_ANALYSIS.md  CODE_QUALITY_GUIDE.md  DEPLOYMENT_GUIDE.md  LICENSE  QUALITY_METRICS.md  README.md  anti_blocking_strategy.py  exemplo_uso.py  extract_links.py  firecrawl_integration.py  integrated_scraper.py  links.yaml  login_automation.py  monitoring_system.py  performance_optimizer.py  prompt_content_scraper.py  pyproject.toml  requirements.txt  setup.py  storage_manager.py
.cursor/rules/: anti_detection.mdc  logging-error-handling.mdc  login_automation.mdc  performance-optimization.mdc  performance_optimization_advanced.mdc  project-structure.mdc  python-best-practices.mdc  web-scraping-selenium.mdc  yaml-configuration.mdc
